--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -5,13 +5,22 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee
 http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
     <servlet>
-        <servlet-name>TokenServlet</servlet-name>
-        <servlet-class>ch.hasselba.servlet.TokenServlet</servlet-class>
+        <servlet-name>DominoStatelessTokenServlet</servlet-name>
+        <servlet-class>ch.hasselba.servlet.DominoStatelessTokenServlet</servlet-class>
     </servlet> 
 
     <servlet-mapping>
-        <servlet-name>TokenServlet</servlet-name>
+        <servlet-name>DominoStatelessTokenServlet</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
-    
+
+	<context-param>
+   	 	<param-name>UsernameBackend</param-name>
+    	<param-value>Sven Hasselbach</param-value>
+	</context-param>
+
+	<context-param>
+   	 	<param-name>SecretSalt</param-name>
+    	<param-value>I am a secret salt!</param-value>
+	</context-param>
 </web-app>
