--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="E:/Downloads/junit-4.12.jar"/>
 	<classpathentry kind="lib" path="E:/Downloads/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="E:/Downloads/selenium-server-standalone-2.44.0.jar"/>
+	<classpathentry kind="lib" path="E:/Downloads/commons-codec-1.10.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
