Added static filter

--- a/build.properties
+++ b/build.properties
@@ -2,6 +2,7 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                WebContent/,\
-               plugin.xml
+               plugin.xml,\
+               WebContent/WEB-INF/lib/commons-codec-1.10.jar
                .
 source.. = src/
