--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -11,8 +11,18 @@ http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
 
     <servlet-mapping>
         <servlet-name>DominoStatelessTokenServlet</servlet-name>
-        <url-pattern>/*</url-pattern>
+        <url-pattern>/servlet/*</url-pattern>
     </servlet-mapping>
+ 
+    <filter>
+    	<filter-name>StaticFilter</filter-name>
+    	<filter-class>ch.hasselba.servlet.StaticFilter</filter-class>
+	</filter>
+	<filter-mapping>
+    	<filter-name>StaticFilter</filter-name>
+    	<url-pattern>/*</url-pattern>
+	</filter-mapping>
+
 
 	<context-param>
    	 	<param-name>UsernameBackend</param-name>
