--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="lib" path="E:/Downloads/hamcrest-core-1.3.jar"/>
 	<classpathentry kind="lib" path="E:/Downloads/selenium-server-standalone-2.44.0.jar"/>
 	<classpathentry kind="lib" path="WebContent/WEB-INF/lib/commons-codec-1.10.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/SeleniumTestBench"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
